# nano-coder

./: .env.example  .gitignore  AGENTS.md  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements-gpu.txt
config/: benchmark-v1.yaml  dataset-publish-v1.yaml  experiments.yaml  generation-v1.yaml  manual-review-v1.yaml  phase1-v1.yaml  phase2-v1.yaml  phase3-v1.yaml  phase4-v1.yaml  phase5-v1.yaml  quality-gates-v1.yaml  scope-boundary.yaml  smoke-train-v1.yaml  train-v1.yaml
docs/: API-CONTRACT.md  ARCHITECTURE.md  BUSINESS-RULES.md  CI.md  COMPUTE-ENVIRONMENT.md  DOMAIN-EVENTS.md  EVALUATION-METHOD.md  EXPERIMENTS.md  GLOSSARY.md  HYPOTHESIS-WORKFLOW.md  NEW-PROJECT-CHECKLIST.md  PAPER-NARRATIVE.md  PHASES.md  PIPELINE-CONTRACT.md  QUANTUN-IA-PROVEN-METHODS.md  README.md  REPRODUCIBILITY.md  RESEARCH-LAB-STRUCTURE.md  SECURITY.md  STATE-MACHINES.md  TESTING.md  TRAINING-METHODS.md  USE-CASE-EXAMPLE.md
experiments/: _method_runner.py  _stub_runner.py
paper/: README.md  arxiv_metadata.yaml  main.tex  references.bib
scripts/: benchmark.py  bootstrap_gold_seeds.py  bootstrap_held_out_tasks.py  export_held_out_blocklist.py  export_prompts_to_local.py  export_topic_matrix.py  filter_synthetic.py  generate_experiments.py  generate_synthetic.py  harness_smoke.sh  health_check.py  prepare_review_sample.py  promote_seeds.py  publish_dataset.py  publish_mixed_dataset.py  report_export.py  reviewer_repro.sh  run_phase1_language.py  run_phase2_lora.py  run_phase3_wave1.py  run_phase4_evaluation.py  run_phase5_ranking.py  train.py  (+7 more)
(+358 files in other folders)
