[project]
name = "nano-coder"
version = "0.1.0"
description = "SLM fine-tuning benchmark for JS, HTML, and FreeMarker via synthetic distillation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Alexandre Zanata" }]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4", "pyyaml>=6.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "real: requires local GPU (RTX 4060); skipped in CI",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"scripts/generate_experiments.py" = ["E501"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
